--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg</a>, at <a href="http://www.coli.uni-saarland.de/">Department of Computational Linguistics & Phonetics.</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>. 
       Right now he is mostly working on Discourse Relation Parsing and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks.</p>
       <div id="contact-details">
-        <p class="contact"><span>Email: </span><a href="mailto:w.shi@coli.uni-saarland.de?Subject=Hello%20again" target="_top">Mail</a></p>
+        <p class="contact"><span>Email: </span><a href="mailto:w.shi@coli.uni-saarland.de?Subject=Hello%20Hello" target="_top">Mail</a></p>
         <p class="contact"><span>Phone: </span>+49(0)681 302 70018</p>
         <p class="contact"><span>Address: </span>Universit&aumlt des Saarlandes, Campus, C7.4, Room 3.01, &emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
       </div>
