--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="education" class="cv-section">
       <h3>Education</h3>
       <p>July, 2016 - Present<br>
-      Ph.D Candidate, Department of Computational Linguistics and Phonetics, <b>Saarland University</b>, Germany.<br>
+      Ph.D Candidate, Department of Computational Linguistics and Phonetics, <b>Saarland University</b>, Saarbr&uumlcken, Germany.<br>
       Supervisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
       
       Sept., 2013 - June, 2016<br>
