--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div id="header-content">
       <h1>Wei Shi (&#26045;&#20255;)</h1>
       <h2>Ph.D Candidate / Junior Researcher</h2>
-      <p>Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg</a>, at <a href="http://www.coli.uni-saarland.de/">Department of Computational Linguistics & Phonetics.</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>. 
+      <p>Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg</a>,
+      at <a href="http://www.coli.uni-saarland.de/">Department of Computational Linguistics & Phonetics.</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>
+       of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
       Right now he is mostly working on Discourse Relation Parsing and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks.</p>
       <div id="contact-details">
         <p class="contact"><span>Email: </span><a href="mailto:w.shi@coli.uni-saarland.de?Subject=Hello%20Hello" target="_top">Mail</a></p>
