--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       Supervisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
       
       Sept., 2013 - June, 2016<br>
-      M.Sc, Institute of Automation, <b>Chinese Academy of Sciences</b>, Beijing, China.<br>
+      M.Sc, Computer Science, Institute of Automation, <b>Chinese Academy of Sciences</b>, Beijing, China.<br>
       Supervisor: Prof. Hongwei Hao<br><br>
       
       Sept., 2008 - June, 2012<br>
-      B.Eng, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.
+      B.Eng, Automation, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.
       </p>
     </div>
     <!--end education-->
