hide email address

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
       Right now he is mostly working on Discourse Relation Parsing and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks.</p>
       <div id="contact-details">
-        <p class="contact"><span>Email: </span><a href="mailto:w.shi@coli.uni-saarland.de?Subject=Hello" target="_top">Mail</a></p>
+        <p class="contact"><span>Email: </span><a href="mailto:wxxxxxxxx.shi@coli.uni-saarland.de?Subject=Hello" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top">Mail</a></p>
         <p class="contact"><span>Phone: </span>+49(0)681 302 70018</p>
         <p class="contact"><span>Address: </span>Universit&aumlt des Saarlandes, Campus, C7.4, Room 3.01, &emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
       </div>
