--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
-      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B>
+      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B>(to appear)
 		<br>
 		<B>Wei Shi</B>, Frances Yung, Raphael Rubino and Vera Demberg
 		<br>
-		<I>In submission to IJCNLP-2017</I>
+		<I>In Proceedings of the 8th International Joint Conference on Natural Language Processing (IJCNLP-2017), Novermber 27- December 1, 2017, Taipei, Taiwan</I>
 		</p>
 		<p>
 		<B>On the Need of Cross Validation for Discourse Relation Classification.</B>
