--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       Supervisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
       
       Sept., 2013 - June, 2016<br>
-      M.Sc, Computer Science, Institute of Automation, <b>Chinese Academy of Sciences</b>, Beijing, China.<br>
+      M.Sc, Computer Science, <b>Institute of Automation, Chinese Academy of Sciences</b>, Beijing, China.<br>
       Supervisor: Prof. Hongwei Hao<br><br>
       
       Sept., 2008 - June, 2012<br>
