--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 		<I>In Proceedings of the 8th International Joint Conference on Natural Language Processing (IJCNLP-2017), Novermber 27- December 1, 2017, Taipei, Taiwan</I>
 		</p>
 		<p>
-    <B>On the Need of Cross Validation for Discourse Relation Classification.</B> (<a href=./paper/eacl17_cv.pdf>paper</a>)
+    <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=./paper/eacl17_cv.pdf>paper</a>]
 		<br>
 		<B>Wei Shi</B> and Vera Demberg
 		<br>
 		<I>In Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics (EACL-2017), page 150-156, April 3-7, 2017, Valencia, Spain.</I>
 		</p>
 		<p>
-    <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> (<a href=./paper/acl16_alstm.pdf>paper</a>)
+    <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> [<a href=./paper/acl16_alstm.pdf>paper</a>]
 		<br>
 		Peng Zhou, <B>Wei Shi</B>, Jun Tian, Zhenyu Qi, Bingchen Li, Hongwei Hao, and Bo Xu.
 		<br>
