--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<br>
 		<B>Wei Shi</B>, Frances Yung, Raphael Rubino and Vera Demberg
 		<br>
-		<I>In Proceedings of the 8th International Joint Conference on Natural Language Processing (IJCNLP-2017), Novermber 27- December 1, 2017, Taipei, Taiwan</I>
+		<I>In Proceedings of the 8th International Joint Conference on Natural Language Processing (IJCNLP-2017), page 484-495, Novermber 27- December 1, 2017, Taipei, Taiwan</I>
 		</p>
 		<p>
     <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=./paper/eacl17_cv.pdf>paper</a>]
