--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id = "education" class="cv-section">
 	 <h3>Research Interests</h3>
 
-	 <p>Discourse Relation Parsing, Sentiment Analysis, Relation Extraction, Deep Learning.  
+	 <p>Discourse Relation Parsing, Sentiment Analysis, Relation Extraction, Deep Learning.</p>  
 	  
     </div>
     <hr width="20%">
@@ -93,10 +93,24 @@
 		<br>
 		<I>In Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (ACL-2016), page 207-212, August 07-12, 2016, Berlin, Germany.
 		</p>
-
   </div>
+
+  <hr width="20%">
+
+    <div id="education" class="cv-section">
+      <h3>Links</h3>
+        <p>
+        <ul style="list-style-type:disc">
+          <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group leading by Prof. Dr. Vera Demberg</a></li>
+          <li><a href="www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
+          <li><a href="www.uni-saarland.de">Saarland University</a></li>
+        </ul>
+        </p>
+    </div>
   <!--end content-->
 </div>
+
+<hr width="20%">
 <!--end wrap-->
 <div id="spacing"></div>
 <!--hack for ie6 and ie7-->
