--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <p>
         <ul style="list-style-type:disc">
           <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group leading by Prof. Dr. Vera Demberg</a></li>
-          <li><a href="www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
-          <li><a href="www.uni-saarland.de">Saarland University</a></li>
+          <li><a href="https://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
+          <li><a href="https://www.uni-saarland.de">Saarland University</a></li>
         </ul>
         </p>
     </div>
@@ -115,7 +115,7 @@
 <div id="spacing"></div>
 <!--hack for ie6 and ie7-->
 
-<br><br><br><br><br>
+<br><br>
 
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&d=5mSiN96loIZvfYd3z7bhkGdVqbvuks-uwnIiUvgM8UA'></script>
 
