--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <p>
         <ul style="list-style-type:disc">
           <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group leading by Prof. Dr. Vera Demberg</a></li>
-          <li><a href="https://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
-          <li><a href="https://www.uni-saarland.de">Saarland University</a></li>
+          <li><a href="http://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
+          <li><a href="http://www.uni-saarland.de">Saarland University</a></li>
         </ul>
         </p>
     </div>
