--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
-      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B> [<a href=./paper/ijcnlp17.pdf>paper</a>] [<a href=./paper/data/data_ijcnlp17.tar.gz>data</a>]
+      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B> [<a href=./paper/ijcnlp17.pdf>paper</a>] [<a href=http://www.sfb1102.uni-saarland.de/?page_id=2582>data</a>]
 		<br>
 		<B>Wei Shi</B>, Frances Yung, Raphael Rubino and Vera Demberg
 		<br>
