--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
-      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B> [<a href=./paper/ijcnlp17.pdf>paper</a>] [<a href=http://www.sfb1102.uni-saarland.de/?page_id=2582>data</a>]
+      <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/I17-1049>paper</a>] [<a href=http://www.sfb1102.uni-saarland.de/?page_id=2582>data</a>]
 		<br>
 		<B>Wei Shi</B>, Frances Yung, Raphael Rubino and Vera Demberg
 		<br>
 		<I>In Proceedings of the 8th International Joint Conference on Natural Language Processing (IJCNLP-2017), page 484-495, Novermber 27- December 1, 2017, Taipei, Taiwan</I>
 		</p>
 		<p>
-    <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=./paper/eacl17_cv.pdf>paper</a>]
+    <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/E17-2024>paper</a>]
 		<br>
 		<B>Wei Shi</B> and Vera Demberg
 		<br>
 		<I>In Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics (EACL-2017), page 150-156, April 3-7, 2017, Valencia, Spain.</I>
 		</p>
 		<p>
-    <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> [<a href=./paper/acl16_alstm.pdf>paper</a>]
+    <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/P16-2034>paper</a>]
 		<br>
 		Peng Zhou, <B>Wei Shi</B>, Jun Tian, Zhenyu Qi, Bingchen Li, Hongwei Hao, and Bo Xu.
 		<br>
