--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
       <h3>Education</h3>
       <p>July, 2016 - Present<br>
       Ph.D Candidate, Department of Computational Linguistics and Phonetics, <b>Saarland University</b>, Saarbr&uumlcken, Germany.<br>
-      Supervisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
+      Advisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
       
       Sept., 2013 - June, 2016<br>
       M.Sc, Computer Science, <b>Institute of Automation, Chinese Academy of Sciences</b>, Beijing, China.<br>
-      Supervisor: Prof. Hongwei Hao<br><br>
+      Advisor: Prof. Dr. Hongwei Hao and Prof. Dr. Bo Xu<br><br>
       
       Sept., 2008 - June, 2012<br>
       B.Eng, Automation, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.
+      Advisor: Dr. Li Ding
       </p>
     </div>
     <!--end education-->
