--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       Advisor: Prof. Dr. Hongwei Hao and Prof. Dr. Bo Xu<br><br>
       
       Sept., 2008 - June, 2012<br>
-      B.Eng, Automation, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.
+      B.Eng, Automation, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.<br>
       Advisor: Dr. Li Ding
       </p>
     </div>
