--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
+      <B>Acquiring Annotated Data with Cross-lingual Explicitation for Implicit Discourse Relation Classification.</B> [<a href=https://arxiv.org/pdf/1808.10290.pdf>paper</a>]
+      <br>
+      <B>Wei Shi</B>, Frances Yung and Vera Demberg
+      <br>
+      <I>arXiv preprint, arXiv:1808.10290</I>
+      </p>
+      <p>
       <B>Using Explicit Discourse Relation Connectives in Translation for Implicit Discourse Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/I17-1049>paper</a>] [<a href=http://www.sfb1102.uni-saarland.de/?page_id=2582>data</a>]
 		<br>
 		<B>Wei Shi</B>, Frances Yung, Raphael Rubino and Vera Demberg
