--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
+      <B>Learning to Explicitate Connectives with Seq2Seq Network for Implicit Discourse Relation Classification.</B> [<a href=https://arxiv.org/pdf/1811.01697.pdf>paper</a>]
+      <br>
+      <B>Wei Shi</B> and Vera Demberg
+      <br>
+      <I>arXiv preprint, arXiv:1811.01697<I>
+      </p>
+      <p>
       <B>Acquiring Annotated Data with Cross-lingual Explicitation for Implicit Discourse Relation Classification.</B> [<a href=https://arxiv.org/pdf/1808.10290.pdf>paper</a>]
       <br>
       <B>Wei Shi</B>, Frances Yung and Vera Demberg
