--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <br>
       <B>Wei Shi</B> and Vera Demberg
       <br>
-      <I>arXiv preprint, arXiv:1811.01697<I>
+      <I>arXiv preprint, arXiv:1811.01697</I>
       </p>
       <p>
       <B>Acquiring Annotated Data with Cross-lingual Explicitation for Implicit Discourse Relation Classification.</B> [<a href=https://arxiv.org/pdf/1808.10290.pdf>paper</a>]
