--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <!--end header-content-->
-    <div id="header-photo"> <img src="images/wshi.jpg" alt="" /> <!--div class="line"></div--> <br>     
+    <div id="header-photo"> <img src="images/sw.jpg" alt="" /> <!--div class="line"></div--> <br>     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	 <!-- Add font awesome icons -->
 	 <a href="https://scholar.google.com/citations?user=uUp-o9IAAAAJ&hl=en" class="fa fa-google"></a>
@@ -65,7 +65,6 @@
       
       Sept., 2008 - June, 2012<br>
       B.Eng, Automation, Department of Power and Mechanical Engineering, <b>Wuhan University</b>, Hubei, China.<br>
-      Advisor: Dr. Li Ding
       </p>
     </div>
     <!--end education-->
