--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </p>
       
       <p>
-      <B>Learning to Explicitate Connectives with Seq2Seq Network for Implicit Discourse Relation Classification.</B> (to appear)
+      <B>Learning to Explicitate Connectives with Seq2Seq Network for Implicit Discourse Relation Classification.</B> [<a href=https://www.aclweb.org/anthology/W19-0416>paper</a>]
       <br>
       <B>Wei Shi</B> and Vera Demberg
       <br>
-      <I>In Proceedings of the 13th International Conference on Computational Semantics (IWCS-2019), Gothenburg, Sweden</I>
+      <I>In Proceedings of the 13th International Conference on Computational Semantics (IWCS-2019), page 188-199, May 23-27, 2019, Gothenburg, Sweden</I>
       </p>
       
       <p>
@@ -139,6 +139,6 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&d=5mSiN96loIZvfYd3z7bhkGdVqbvuks-uwnIiUvgM8UA'></script>
 
 <hr>
-Last updated: 29-Mar-2019
+Last updated: 24-May-2019
 </body>
 </html>
