--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       <p>
-      <B>Acquiring Annotated Data with Cross-lingual Explicitation for Implicit Discourse Relation Classification.</B> (to appear)
+      <B>Acquiring Annotated Data with Cross-lingual Explicitation for Implicit Discourse Relation Classification.</B> [<a href="https://www.aclweb.org/anthology/W19-2703">paper</a>]
       <br>
       <B>Wei Shi</B>, Frances Yung and Vera Demberg
       <br>
