--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <br>
       <B>Wei Shi</B>, Frances Yung and Vera Demberg
       <br>
-      <I>In Proceedings of the 7th Workshop on Rhetorical Structure Theory and Related Formalisms (DISRPT@NAACL-2019), Minneapolis, USA</I>
+      <I>In Proceedings of Discourse Relation Parsing and Treebanking (DISRPT@NAACL-2019), page 12-21, June 6, 2019, Minneapolis, USA</I>
       </p>
       
       <p>
