--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
     <div id="header-content">
       <h1>Wei Shi (&#26045;&#20255;)</h1>
       <h2>Ph.D Candidate / Junior Researcher</h2>
-      <p>Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
+      <p>
+      Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
       at <a href="http://www.coli.uni-saarland.de/">Department of Computational Linguistics & Phonetics.</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>
        of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
-      Right now he is mostly working on Discourse Relation Parsing and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks. <a href="./pdfs/cv.pdf">Curriculum vitae</a></p>
+      Right now he is mostly working on Discourse Relation Parsing and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks. 
+      <br>
+      [<a href="./pdfs/cv.pdf">Curriculum vitae</a>]
+      </p>
       <div id="contact-details">
         <p class="contact"><span>Email: </span><a href="mailto:wxxxxxxxx.shi@coli.uni-saarland.de?Subject=Hello" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top">Mail</a></p>
         <p class="contact"><span>Phone: </span>+49(0)681 302 70027</p>
-        <p class="contact"><span>Address: </span>Campus, Building C7.2, Room 3.11, <br/>&emsp;&emsp;&emsp;&emsp;&emsp; Universit&aumlt des Saarlandes,<br/>&emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
+        <p class="contact"><span>Address: </span>Campus, Building C7 2, Room 3.11, <br/>&emsp;&emsp;&emsp;&emsp;&emsp; Universit&aumlt des Saarlandes,<br/>&emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
       </div>
     </div>
     <!--end header-content-->
