--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <div id="wrap">
   <div id="header">
     <div id="header-content">
-      <h1>Wei Shi (&#26045;&#20255;)</h1>
+      <h1>Wei Shi &nbsp; &#26045;&#20255;(sh&#299; w&#283;i)</h1>
+    		
       <h2>Ph.D Candidate / Junior Researcher</h2>
       <p>
       Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
