--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
   <!--end header-->
     
-    <div id="content">
+  <div id="content">
     <hr width="20%">
     <div id = "education" class="cv-section">
 	 <h3>Research Interests</h3>
@@ -112,7 +112,7 @@
 		</p>
 		
 		<p>
-    <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/E17-2024>paper</a>]
+      <B>On the Need of Cross Validation for Discourse Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/E17-2024>paper</a>]
 		<br>
 		<B>Wei Shi</B> and Vera Demberg
 		<br>
@@ -120,28 +120,34 @@
 		</p>
 		
 		<p>
-    <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/P16-2034>paper</a>]
+      <B>Attention-based Bidirectional Long Short-term Memory Networks for Relation Classification.</B> [<a href=http://www.aclweb.org/anthology/P16-2034>paper</a>]
 		<br>
 		Peng Zhou, <B>Wei Shi</B>, Jun Tian, Zhenyu Qi, Bingchen Li, Hongwei Hao, and Bo Xu.
 		<br>
 		<I>In Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (ACL-2016), page 207-212, August 07-12, 2016, Berlin, Germany.
-		</p>
-		
-		
+		</p>		
   </div>
 
   <hr width="20%">
+  
+  <div id="experience" class="cv-section">
+  <h3>Professional Activities</h3>  
+  
+  <p>PC member of IEEE TCSS, CoNLL-2018, 2019, NAACL-HLT-2019, ACL-2019 etc.</p>
+  </div>
+  
+  <hr width="20%">
 
-    <div id="education" class="cv-section">
-      <h3>Links</h3>
-        <p>
-        <ul style="list-style-type:disc">
-          <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group led by Prof. Dr. Vera Demberg</a></li>
-          <li><a href="http://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
-          <li><a href="http://www.uni-saarland.de">Saarland University</a></li>
-        </ul>
-        </p>
-    </div>
+  <div id="education" class="cv-section">
+    <h3>Links</h3>
+      <p>
+      <ul style="list-style-type:disc">
+        <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group led by Prof. Dr. Vera Demberg</a></li>
+        <li><a href="http://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
+        <li><a href="http://www.uni-saarland.de">Saarland University</a></li>
+      </ul>
+      </p>
+  </div>
   <!--end content-->
 </div>
 
