--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
       
-		<p>
-      <B>A Hybrid Model for Globally Coherent Story Generation.</B> (to appear)
+	  <p>
+      <B>A Hybrid Model for Globally Coherent Story Generation.</B> [<a href="https://www.aclweb.org/anthology/W19-3404">paper</a>]
       <br>
       Fangzhou Zhai, Vera Demberg, Pavel Shkadzko, <B>Wei Shi</B> and Asad Sayeed
       <br>
-      <I>In Proceedings of the 2nd workshop of Storytelling (StoryNLP@ACL2019), Florence, Italy</I>
+      <I>In Proceedings of the 2nd workshop of Storytelling (StoryNLP@ACL2019), page 34-45, Aug 1, 2019, Florence, Italy</I>
       </p>      
       
       <p>
