--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
       Right now he is mostly working on Discourse Relation Parsing, Neural Language Generation and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks. 
       <br>
-      His Curriculum vitae can be found <a href="./pdfs/cv.pdf">here</a>.
+      His Curriculum vitae can be found <a href="https://drive.google.com/file/d/1YhPp7pDBe4r-KzhlNYSqyy0qZWcjWXjQ/view?usp=sharing">here</a>.
       </p>
       <div id="contact-details">
         <p class="contact"><span>Email: </span><a href="mailto:wxxxxxxxx.shi@coli.uni-saarland.de?Subject=Hello" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top">Mail</a></p>
