--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <hr width="20%">
     <div id="education" class="cv-section">
       <h3>Education</h3>
-      <p>July, 2016 - Present<br>
+      <p>July, 2016 - October, 2020 (expected)<br>
       Ph.D Candidate, Department of Computational Linguistics and Phonetics, <b>Saarland University</b>, Saarbr&uumlcken, Germany.<br>
       Advisor: <a href="http://www.coli.uni-saarland.de/~vera">Prof. Dr. Vera Demberg.</a><br><br>
       
