--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h3>Publications</h3>
 		
 		<p>      
-      <B>Next Sentence Prediction helps Implicit Discourse Relation Classification within and across Domains</B> (to appear)
+        <B>Next Sentence Prediction helps Implicit Discourse Relation Classification within and across Domains.</B> [<a href="https://www.aclweb.org/anthology/D19-1586/">paper</a>]
       <br>
       <B>Wei Shi</B> and Vera Demberg
       <br>
