--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     <h3>Links</h3>
       <p>
       <ul style="list-style-type:disc">
-        <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg/home.html">Our Group led by Prof. Dr. Vera Demberg</a></li>
-        <li><a href="https://www.uni-saarland.de/en/department/lst/home.html">Department of Language Science and Technology.</a></li>
+        <li><a href="https://www.uni-saarland.de/en/lehrstuhl/demberg.html">Our Group led by Prof. Dr. Vera Demberg</a></li>
+        <li><a href="https://www.uni-saarland.de/en/department/lst/">Department of Language Science and Technology.</a></li>
         <li><a href="http://www.coli.uni-saarland.de">Department of Computational Linguistics and Phonetics</a></li>
         <li><a href="http://www.uni-saarland.de">Saarland University</a></li>
       </ul>
