--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div id="experience" class="cv-section">
   	<h3>Professional Activities</h3>  
   
-  <p>PC member of IEEE TCSS, CoNLL-2018, 2019, NAACL-HLT-2019, ACL-2019, 2020 etc.</p>
+  <p>PC member of IEEE TCSS, CoNLL-2018, 2019, NAACL-HLT-2019, ACL-2019, 2020, AACL-IJCNLP 2020 etc.</p>
   </div>
   
   <hr width="20%">
