--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     <div id="header-content">
       <h1>Wei Shi &nbsp; &#26045;&#20255;(sh&#299; w&#283;i)</h1>
     		
-      <h2>Ph.D Candidate / Junior Researcher</h2>
+      <h2>Senior Algorithm Engineer @ Alibaba</h2>
       <br>
       <p>
-      Wei Shi is a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
+      Wei Shi received his Ph.D, Magna Cum Laude in December 2020 and joined Alibaba group as an Algorithm Engineer in 2021. He was a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
       at <a href="https://www.uni-saarland.de/en/department/lst/home.html/">The Department of Language Science and Technology</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>
        of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
-      Right now he is mostly working on Discourse Relation Parsing, Natural Language Generation and Text Classification. He is also interested in using deep learning methods to solve NLP related tasks. 
       <br>
       <!--
       His Curriculum vitae can be found <a href=pdfs/CV_en.pdf>here(English)</a> and <a href=pdfs/CV_zh.pdf>这里(中文)</a>.
@@ -174,6 +173,6 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&d=5mSiN96loIZvfYd3z7bhkGdVqbvuks-uwnIiUvgM8UA'></script>
 
 <hr>
-Last updated: 14-Aug-2019
+Last updated: 26-Jan-2021
 </body>
 </html>
