--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
   
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
-		
+				<p>      
+        <B>Entity Enhancement for Implicit Discourse Relation Classification in the Biomedical Domain</B> 
+      <br>
+      <B>Wei Shi</B> and Vera Demberg
+      <br>
+      <I>In Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing (ACL-IJCNLP 2021), August 1-6, 2021, Bangkok, Thailand</I>
+      </p>
 		<p>      
         <B>Next Sentence Prediction helps Implicit Discourse Relation Classification within and across Domains.</B> [<a href="https://www.aclweb.org/anthology/D19-1586/">paper</a>]
       <br>
