--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div id="experience" class="cv-section">
       <h3>Publications</h3>
 				<p>      
-        <B>Entity Enhancement for Implicit Discourse Relation Classification in the Biomedical Domain</B> 
+        <B>Entity Enhancement for Implicit Discourse Relation Classification in the Biomedical Domain</B> [<a href="https://aclanthology.org/2021.acl-short.116/">paper</a>]
       <br>
       <B>Wei Shi</B> and Vera Demberg
       <br>
