--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <h2>Senior Algorithm Engineer @ Alibaba</h2>
       <br>
       <p>
-	      We are <a href=/job_jd>hiring!</a>.
-	      <br>
+	    <p We are <a href=/job_jd>hiring!</a>.</p>
       Wei Shi received his Ph.D, Magna Cum Laude in December 2020 and joined Alibaba group as an Algorithm Engineer in 2021. He was a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
       at <a href="https://www.uni-saarland.de/en/department/lst/home.html/">The Department of Language Science and Technology</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>
        of <a href="http://www.uni-saarland.de/">Saarland University</a> in Germany. 
