--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <link rel="icon" href="images/tab_icon.png">
 <title>Wei Shi's Homepage</title>
 <meta charset="utf-8">
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
 <link type="text/css" rel="stylesheet" href="styles/style.css" />
 <!--[if IE 6]>
 <script src="js/ie6-transparency.js"></script>
