--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Senior Algorithm Engineer @ Alibaba</h2>
       <br>
       <p>
-      We are <a href=job_jd.txt>hiring</a>!
+      We are hiring algorithm engineers based in Hangzhou, please see JD <a href=job_jd.txt>here</a>!
       <br>
       Wei Shi received his Ph.D, Magna Cum Laude in December 2020 and joined Alibaba group as an Algorithm Engineer in 2021. He was a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
       at <a href="https://www.uni-saarland.de/en/department/lst/home.html/">The Department of Language Science and Technology</a> and Collaborative Research Center <a href="http://www.sfb1102.uni-saarland.de/">SFB-1102</a>
