--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Senior Algorithm Engineer @ Alibaba</h2>
       <br>
       <p>
-      We have multiple opening algorithm engineer positions in Hangzhou, China, please see detailed JD <a href=job_jd.txt>here</a>!
+      We have multiple algorithm engineer positions open in Hangzhou, China, please see detailed JD <a href=job_jd.txt>here</a>!
       <br>
       <br>
       Wei Shi received his Ph.D, Magna Cum Laude in December 2020 and joined Alibaba group as an Algorithm Engineer in 2021. He was a Ph.D Candidate and Junior Researcher working on Natural Language Processing, under the supervision of <a href="https://www.uni-saarland.de/lehrstuhl/demberg/members/team.html">Prof. Dr. Vera Demberg</a>,
