--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p class="contact"><span>Phone: </span>+49(0)681 302 70027</p>
         <p class="contact"><span>Address: </span>Campus, Building C7 2, Room 3.11, <br/>&emsp;&emsp;&emsp;&emsp;&emsp; Universit&aumlt des Saarlandes,<br/>&emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
         -->
+        <br>
+      <p>
+        Update: Wei Shi has left Alibaba and joined MiniMax Inc., a startup company focusing on LLM and Multimodality models. Feel free to get in touch if you are interested!
+      </p>
       </div>
     </div>
     <!--end header-content-->
@@ -180,6 +184,6 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&d=5mSiN96loIZvfYd3z7bhkGdVqbvuks-uwnIiUvgM8UA'></script>
 
 <hr>
-Last updated: 26-Jan-2021
+Last updated: 09-Mar-2023
 </body>
 </html>
