--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="header-content">
       <h1>Wei Shi &nbsp; &#26045;&#20255;(sh&#299; w&#283;i)</h1>
     		
-      <h2>Senior Algorithm Engineer @ Alibaba</h2>
+      <h2>LLM Algorithm Engineer</h2>
       <br>
       <p>
       <br>
