--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p class="contact"><span>Address: </span>Campus, Building C7 2, Room 3.11, <br/>&emsp;&emsp;&emsp;&emsp;&emsp; Universit&aumlt des Saarlandes,<br/>&emsp;&emsp;&emsp;&emsp;&emsp; 66123, Saarbr&uumlcken, Germany </p>
         -->
         <br>
+       <p>
+        Update^2: Wei Shi has left MiniMax Inc.
+      </p>
       <p>
         Update: Wei Shi has left Alibaba and joined MiniMax Inc., a startup company focusing on LLM and Multimodality models. Feel free to get in touch if you are interested!
       </p>
