--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         -->
         <br>
        <p>
-        Update^2: Wei Shi has left MiniMax Inc.
+        2024-01: Wei Shi has left MiniMax Inc, but is still working on LLMs.
       </p>
       <p>
-        Update: Wei Shi has left Alibaba and joined MiniMax Inc., a startup company focusing on LLM and Multimodality models. Feel free to get in touch if you are interested!
+        2022-06: Wei Shi has left Alibaba and joined MiniMax Inc., a startup company focusing on LLM and Multimodality models. Feel free to get in touch if you are interested!
       </p>
       </div>
     </div>
