--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </ul>
             </section>
         </main>
-
+        <script type='text/javascript' id='clustrmaps' src='https://cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&d=5mSiN96loIZvfYd3z7bhkGdVqbvuks-uwnIiUvgM8UA'></script>
         <footer class="footer">
             <p>Last updated: March 2024</p>
         </footer>
