--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="period">2013 – 2016</div>
                     <div class="details">
                         <h4>M.Sc. in Computer Science</h4>
-                        <p class="institution">Chinese Academy of Sciences, Beijing, China</p>
+                        <p class="institution">Institute of Automation, Chinese Academy of Sciences, Beijing, China</p>
                         <p class="advisor">Advisors: Prof. Dr. Hongwei Hao and Prof. Dr. Bo Xu</p>
                     </div>
                 </div>
